# Alpha_Zero

./: CMakeLists.txt  main.cpp
src/: HexCNN.h  Hex_Environement.h  IANN_Player.h  IA_Player.h
